Modified index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,124 @@
-"Practical data analysis webpage"  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Researcher Name - Geophysics</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f8f8f8;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #444;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            text-decoration: none;
+            color: #fff;
+            margin: 0 10px;
+        }
+        section {
+            padding: 20px;
+            margin: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Researcher Name - Geophysics</h1>
+    <p>Research interests: Seismology, Geophysical Imaging, Earthquake Mechanics</p>
+</header>
+
+<nav>
+    <a href="#about">About</a>
+    <a href="#publications">Publications</a>
+    <a href="#software">Software</a>
+    <a href="#downloads">Downloads</a>
+    <a href="#seminars">Seminars/Classes</a>
+    <a href="#contact">Contact</a>
+</nav>
+
+<section id="about">
+    <h2>About</h2>
+    <p>Welcome to my research webpage! I am a geophysicist with expertise in various aspects of seismology and geophysical imaging. My research focuses on understanding the dynamics of earthquakes and utilizing seismic data to image subsurface structures.</p>
+</section>
+
+<section id="publications">
+    <h2>Publications</h2>
+    <ul>
+        <li>Publication 1: Title of the Publication</li>
+        <li>Publication 2: Title of the Publication</li>
+        <li>Publication 3: Title of the Publication</li>
+        <!-- Add more publications as needed -->
+    </ul>
+</section>
+
+<section id="software">
+    <h2>Software</h2>
+    <p>Here you can find software tools developed as part of my research:</p>
+    <ul>
+        <li><a href="#">Software 1</a></li>
+        <li><a href="#">Software 2</a></li>
+        <li><a href="#">Software 3</a></li>
+        <!-- Add more software tools as needed -->
+    </ul>
+</section>
+
+<section id="downloads">
+    <h2>Downloads</h2>
+    <p>Downloadable resources related to my research:</p>
+    <ul>
+        <li><a href="#">Resource 1</a></li>
+        <li><a href="#">Resource 2</a></li>
+        <li><a href="#">Resource 3</a></li>
+        <!-- Add more downloadable resources as needed -->
+    </ul>
+</section>
+
+<section id="seminars">
+    <h2>Seminars/Classes</h2>
+    <p>Announcements of upcoming seminars/classes on data analysis:</p>
+    <ul>
+        <li><a href="#">Seminar/Class 1</a></li>
+        <li><a href="#">Seminar/Class 2</a></li>
+        <li><a href="#">Seminar/Class 3</a></li>
+        <!-- Add more seminars/classes as needed -->
+    </ul>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Email: researcher@example.com</p>
+    <p>Phone: +1234567890</p>
+    <p>Address: University Name, Department of Geophysics, City, Country</p>
+</section>
+
+<footer>
+    <p>&copy; 2024 Researcher Name - Geophysics</p>
+</footer>
+
+</body>
+</html>
