Added contact info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Researcher Name - Geophysics</title>
+    <title>Practical Data Analysis in Geophysics</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,8 +48,8 @@
 <body>
 
 <header>
-    <h1>Researcher Name - Geophysics</h1>
-    <p>Research interests: Seismology, Geophysical Imaging, Earthquake Mechanics</p>
+    <h1>Practical Data Analysis in Geophysics</h1>
+    <p>Seismology, Geophysical Imaging, Earthquake Mechanics</p>
 </header>
 
 <nav>
@@ -63,7 +63,7 @@
 
 <section id="about">
     <h2>About</h2>
-    <p>Welcome to my research webpage! I am a geophysicist with expertise in various aspects of seismology and geophysical imaging. My research focuses on understanding the dynamics of earthquakes and utilizing seismic data to image subsurface structures.</p>
+    <p>Welcome to my research webpage! I am a geophysicist with expertise in various aspects of seismology and geophysical imaging. My research focuses on understanding the dynamics of microseismicity and utilizing seismic, potential fields and magnetotelluric data to image subsurface structures.</p>
 </section>
 
 <section id="publications">
@@ -100,7 +100,7 @@
 
 <section id="seminars">
     <h2>Seminars/Classes</h2>
-    <p>Announcements of upcoming seminars/classes on data analysis:</p>
+    <p>Announcements of upcoming seminars on data analysis:</p>
     <ul>
         <li><a href="#">Seminar/Class 1</a></li>
         <li><a href="#">Seminar/Class 2</a></li>
@@ -111,13 +111,15 @@
 
 <section id="contact">
     <h2>Contact</h2>
-    <p>Email: researcher@example.com</p>
-    <p>Phone: +1234567890</p>
-    <p>Address: University Name, Department of Geophysics, City, Country</p>
+	<p>Alexander Minakov</p>
+    <p>Email: alexamin@uio.no</p>
+    <p>Phone: +4740284027</p>
+    <p>Address: Centre for Planetary Habitability, University of Oslo, P.O. Box 1028 Blindern, NO-0315 Oslo, Norway</p>
+
 </section>
 
 <footer>
-    <p>&copy; 2024 Researcher Name - Geophysics</p>
+    <p>&copy; 2024 Alexander Minakov </p>
 </footer>
 
 </body>
