--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 <section id="about">
     <h2>About</h2>
-    <p>Welcome to my research webpage! I am a geophysicist with expertise in various aspects of seismology and geophysical imaging. My research focuses on understanding the dynamics of microseismicity and utilizing seismic, potential fields and magnetotelluric data to image subsurface structures.</p>
+    <p>Welcome to my webpage on data analysis in geophysics! I am a geophysicist with expertise in various aspects of seismology and geophysical imaging. My research focuses on understanding the dynamics of microseismicity and utilizing seismic, potential fields and magnetotelluric data to image subsurface structures.</p>
 </section>
 
 <section id="publications">
