Revert "updated index"
This reverts commit 78e5f278b5d0aa1701aabfa2bd4042e82d04e611.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <h2>Seminars/Classes</h2>
     <p>Announcements of upcoming seminars on data analysis:</p>
     <ul>
-        <li><a href="notebooks/DataPracticals_1.html">Seminar 1</a></li>
+        <li><a href="#">Seminar/Class 1</a></li>
         <li><a href="#">Seminar/Class 2</a></li>
         <li><a href="#">Seminar/Class 3</a></li>
         <!-- Add more seminars/classes as needed -->
