added slides to webpage

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 </section>
 
 <section id="publications">
-    <h2>Publications</h2>
+    <h2>Presentations at Conferences</h2>
     <ul>
-        <li>Publication 1: Title of the Publication</li>
+        <li><a href="presentations/ICAM_X_DYPOLE_Posters__OBS_ (3).pdf">ICAM-X Poster Wide-Angle Data</a></li>
         <li>Publication 2: Title of the Publication</li>
         <li>Publication 3: Title of the Publication</li>
         <!-- Add more publications as needed -->
