modified slides to webpage

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <section id="publications">
     <h2>Presentations at Conferences</h2>
     <ul>
-        <li><a href="presentations/ICAM_X_DYPOLE_Posters__OBS_ (3).pdf">ICAM-X Poster Wide-Angle Data</a></li>
+        <li><a href="presentations/ICAM_X_DYPOLE_Posters_OBS.pdf">ICAM-X Poster Wide-Angle Data</a></li>
         <li>Publication 2: Title of the Publication</li>
         <li>Publication 3: Title of the Publication</li>
         <!-- Add more publications as needed -->
